# urdf_start

./: CMakeLists.txt  package.xml
config/: gripper.yaml  head.yaml  joints.yaml
launch/: 09-joints.launch  10-head.launch  11-gripper.launch  gazebo.launch
urdf/: 02-multipleshapes.urdf  03-origins.urdf  04-materials.urdf  05-visual.urdf  06-flexible.urdf  08-macroed.urdf.xacro  09-publishjoints.urdf.xacro  10-firsttransmission.urdf.xacro  11-gripper.urdf.xacro  gazebo_robot.gv  model.urdf
