<package>
	<name>urdf_start</name>
	<version>1.0.0</version>
	<description>
		<p>URDF tutorial</p>
	</description>
	<author>harumo</author>
	<maintainer email="s_harumo@hotmail.co.jp"/>
	<license>BSD</license>
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roslaunch</build_depend>
	<run_depend>robot_state_publisher</run_depend>
	<run_depend>joint_state_publisher</run_depend>
	<run_depend>rviz</run_depend>
	<run_depend>controller_manager</run_depend>
	<run_depend>control_msgs</run_depend>
	<run_depend>gazebo</run_depend>
</package>
